--- a/META.yml
+++ b/META.yml
@@ -18,7 +18,9 @@ name: Data-Transform-ExplicitMetadata
 provides:
   Data::Transform::ExplicitMetadata:
     file: lib/Data/Transform/ExplicitMetadata.pm
-    version: '0.04'
+    version: 0.04_01
+recommends:
+  FileHandle::Fmode: '0.14'
 requires:
   Carp: '0'
   Exporter: '0'
@@ -27,4 +29,4 @@ requires:
   perl: v5.8.0
 resources:
   license: http://dev.perl.org/licenses/
-version: '0.04'
+version: 0.04_01
