--- a/META.yml
+++ b/META.yml
@@ -7,9 +7,9 @@ build_requires:
   IO::Handle: '0'
   Test::More: '0'
 configure_requires:
-  Module::Build: '0.40'
+  Module::Build: '0.42'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.141520'
+generated_by: 'Module::Build version 0.421, CPAN::Meta::Converter version 2.143240'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,7 +18,7 @@ name: Data-Transform-ExplicitMetadata
 provides:
   Data::Transform::ExplicitMetadata:
     file: lib/Data/Transform/ExplicitMetadata.pm
-    version: 0.04_01
+    version: '0.05'
 recommends:
   FileHandle::Fmode: '0.14'
 requires:
@@ -29,4 +29,4 @@ requires:
   perl: v5.8.0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.04_01
+version: '0.05'
